# ocaml-systemd

./: .gitignore  .travis.yml  AUTHORS.txt  INSTALL.txt  Makefile  README.md  README.txt  TODO.org  _oasis  _tags  myocamlbuild.ml  opam  setup.ml  systemd.opam  systemd_api.odocl
.github/workflows/: main.yml
lib/: META  daemon.ml  daemon.mli  daemon_stubs.c  dune  journald.ml  journald.mli  journald.mllib  journald_stubs.c  libjournald_stubs.clib  libsystemd_stubs.clib  systemd.mllib
